[tool.poetry]
name = "lost-vault-discord-bot"
version = "0.1.0"
description = "Discord bot for working with Lost Vault mobile game API"
authors = ["bitcomrade <bitcomrade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.0.0-alpha.8"
pandas = "^1.4.0"
SQLAlchemy = "^1.4.31"
tqdm = "^4.62.3"
tabulate = "^0.8.9"
numerize = "^0.12"
requests = "^2.27.1"
bs4 = "^0.0.1"
psycopg2 = "^2.9.3"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.931"
isort = "^5.10.1"
types-beautifulsoup4 = "^4.10.11"
types-requests = "^2.27.9"
types-tabulate = "^0.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
